--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 <p class="location">
   <a href="https://goo.gl/maps/nMi9h" title="ThoughtWorks Gurgaon Office">ThoughtWorks, Gurgaon </a>
 </p>
-<p class="date"> Friday, 25th July, 2014 - Monday, 28th July, 2014 </p>
+
+<p class="date"> Thursday, 24th July, 2014 - Saturday, 27th July, 2014 </p>
 <p class="date"> 9:00 am - 5:00 pm </p>
 
 <div class="register">
@@ -99,7 +100,7 @@ DLF Cyber City Phase III<br>
 Gurgaon-122002, Haryana
 </blockquote>
 
-<h5 id="who-are-the-trainers"><strong>Who are the Trainers?</strong></h5>
+<h5 id="who-are-the-trainers"><strong>Who is the Trainer?</strong></h5>
 <ul>
   <li><a href="http://www.linkedin.com/profile/view?id=1886699">Mushtaq Ahmed</a></li>
 </ul>
