added city field

--- a/register.html
+++ b/register.html
@@ -88,7 +88,18 @@
       <input type="text" title="" required="" aria-required="true" aria-label="Mobile Number:  " dir="auto" id="entry_1362723529" class="ss-q-short" value="" name="entry.1362723529">
       <div id="1419615248_errorMessage" class="error-message"></div>
 
-      </div></div></div> <div role="listitem" class="ss-form-question errorbox-good">
+      </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_1468548304"><div class="ss-q-title">City:
+<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+<span class="ss-required-asterisk">*</span></div>
+<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
+<input type="text" name="entry.1468548304" value="" class="ss-q-short" id="entry_1468548304" dir="auto" aria-label="City:  " aria-required="true" required="" title="">
+<div class="error-message" id="1294818426_errorMessage"></div>
+<div class="required-message">This is a required question</div>
+
+
+</div></div></div><div role="listitem" class="ss-form-question errorbox-good">
       <div class="ss-item ss-item-required ss-text" dir="ltr"><div class="ss-form-entry">
       <label for="entry_1246605391" class="ss-q-item-label"><div class="ss-q-title">Company Name:
       <label aria-label="(Required field)" for="itemView.getDomIdToLabel()"></label>
