--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Scala Workshop by ThoughtWorks</title>
+    <title>Scala Workshop by ThoughtWorks Gurgaon</title>
     <meta name="viewport" content="width=device-width">
     <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
     <meta type='Scala workshop delhi gurgaon NCR ThoughtWorksfree' />
@@ -116,7 +116,7 @@ Gurgaon-122002, Haryana
 <h5 id="how-can-you-get-in-touch-with-us"><strong>How can you get in touch with us?</strong></h5>
 <ul>
   <li>For news and updates, check out our <a href=" https://www.facebook.com/GeeknightGurgaon">facebook page</a></li>
-  <li>For questions/comments/clarifications, mail to <a href="mailto:gurgaonscala@thoughtworks.com">gurgaonscala@thoughtworks.com</a></li>
+  <li>For questions/comments/clarifications, mail to <a href="mailto:gurgaonscala@gmail.com">gurgaonscala@gmail.com</a></li>
   <li>Contact person: Tushar Garg (+91-8826588556)</li>
 </ul>
 
