Added link to Scala tutorial

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Gurgaon-122002, Haryana
 
 <h5 id="how-can-i-prep-up-for-the-course"><strong>How can I prep up for the course?</strong></h5>
 <ul>
-  <li>Get yourself familiarized with Scala syntax.</li>
+  <li>Get yourself familiarized with <a href="http://docs.scala-lang.org/tutorials/tour/tour-of-scala.html">Scala syntax</a>.</li>
   <li>Take online <a href="https://www.coursera.org/course/progfun">Scala course from Coursera</a>.</li>
   <li>Get a copy of the <a href="http://www.artima.com/shop/programming_in_scala_2ed">Odersky’s book</a> and go through it as much as you can.</li>
 </ul>
