--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <p class="date"> 9:00 am - 5:00 pm </p>
 
 <div class="register">
-  <a href="register.html" title="Register for Scala training"> Register </a>
+  <p title="Register for Scala training"> Registerations and Submissions have been closed. </a>
 </div>
 </div>
 
