--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
 
 <p class="date"> Thursday, 24th July, 2014 - Sunday, 27th July, 2014 </p>
 <p class="date"> 9:00 am - 5:00 pm </p>
-
-<div class="register">
-  <p title="Register for Scala training"> Registerations and Submissions have been closed. </a>
-</div>
+<p clas="date"> Registrations and Submissions have been closed.</p>
 </div>
 
 <h5 id="principles-of-programming-in-scala"><strong>Principles of programming in Scala</strong></h5>
