Removing registration page

--- a/register.html
+++ b/register.html
@@ -51,100 +51,7 @@
 
     <div class="page-content">
     <div class="wrap">
-      <form onsubmit="" target="_self" id="ss-form" method="POST" action="https://docs.google.com/a/thoughtworks.com/forms/d/1fb6lCPMIuVNoht_UthXe8r9QR7vj1m8d9HbPzdq1BJU/formResponse"><ol style="padding-left: 0" class="ss-question-list" role="list">
-      <div role="listitem" class="ss-form-question errorbox-good">
-      <div class="ss-item ss-item-required ss-text" dir="ltr"><div class="ss-form-entry">
-      <label for="entry_352868927" class="ss-q-item-label"><div class="ss-q-title">First Name:
-      <label aria-label="(Required field)" for="itemView.getDomIdToLabel()"></label>
-      <span class="ss-required-asterisk">*</span></div>
-      <div dir="ltr" class="ss-q-help ss-secondary-text"></div></label>
-      <input type="text" title="" required="" aria-required="true" aria-label="First Name:  " dir="auto" id="entry_352868927" class="ss-q-short" value="" name="entry.352868927">
-      <div id="950108940_errorMessage" class="error-message"></div>
-
-      </div></div></div> <div role="listitem" class="ss-form-question errorbox-good">
-      <div class="ss-item ss-item-required ss-text" dir="ltr"><div class="ss-form-entry">
-      <label for="entry_1315792721" class="ss-q-item-label"><div class="ss-q-title">Last Name:
-      <label aria-label="(Required field)" for="itemView.getDomIdToLabel()"></label>
-      <span class="ss-required-asterisk">*</span></div>
-      <div dir="ltr" class="ss-q-help ss-secondary-text"></div></label>
-      <input type="text" title="" required="" aria-required="true" aria-label="Last Name:  " dir="auto" id="entry_1315792721" class="ss-q-short" value="" name="entry.1315792721">
-      <div id="1018060504_errorMessage" class="error-message"></div>
-
-      </div></div></div> <div role="listitem" class="ss-form-question errorbox-good">
-      <div class="ss-item ss-item-required ss-text" dir="ltr"><div class="ss-form-entry">
-      <label for="entry_118864718" class="ss-q-item-label"><div class="ss-q-title">Email Address:
-      <label aria-label="(Required field)" for="itemView.getDomIdToLabel()"></label>
-      <span class="ss-required-asterisk">*</span></div>
-      <div dir="ltr" class="ss-q-help ss-secondary-text"></div></label>
-      <input type="text" title="" required="" aria-required="true" aria-label="Email Address:  " dir="auto" id="entry_118864718" class="ss-q-short" value="" name="entry.118864718">
-      <div id="1791863594_errorMessage" class="error-message"></div>
-
-      </div></div></div> <div role="listitem" class="ss-form-question errorbox-good">
-      <div class="ss-item ss-item-required ss-text" dir="ltr"><div class="ss-form-entry">
-      <label for="entry_1362723529" class="ss-q-item-label"><div class="ss-q-title">Mobile Number:
-      <label aria-label="(Required field)" for="itemView.getDomIdToLabel()"></label>
-      <span class="ss-required-asterisk">*</span></div>
-      <div dir="ltr" class="ss-q-help ss-secondary-text"></div></label>
-      <input type="text" title="" required="" aria-required="true" aria-label="Mobile Number:  " dir="auto" id="entry_1362723529" class="ss-q-short" value="" name="entry.1362723529">
-      <div id="1419615248_errorMessage" class="error-message"></div>
-
-      </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_1468548304"><div class="ss-q-title">City:
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk">*</span></div>
-<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-<input type="text" name="entry.1468548304" value="" class="ss-q-short" id="entry_1468548304" dir="auto" aria-label="City:  " aria-required="true" required="" title="">
-<div class="error-message" id="1294818426_errorMessage"></div>
-
-
-</div></div></div><div role="listitem" class="ss-form-question errorbox-good">
-      <div class="ss-item ss-item-required ss-text" dir="ltr"><div class="ss-form-entry">
-      <label for="entry_1246605391" class="ss-q-item-label"><div class="ss-q-title">Company Name:
-      <label aria-label="(Required field)" for="itemView.getDomIdToLabel()"></label>
-      <span class="ss-required-asterisk">*</span></div>
-      <div dir="ltr" class="ss-q-help ss-secondary-text"></div></label>
-      <input type="text" title="" required="" aria-required="true" aria-label="Company Name:  " dir="auto" id="entry_1246605391" class="ss-q-short" value="" name="entry.1246605391">
-      <div id="644684494_errorMessage" class="error-message"></div>
-
-      </div></div></div> <div role="listitem" class="ss-form-question errorbox-good">
-      <div class="ss-item ss-item-required ss-select" dir="ltr"><div class="ss-form-entry">
-      <label for="entry_1532018178" class="ss-q-item-label"><div class="ss-q-title">Role:
-      <label aria-label="(Required field)" for="itemView.getDomIdToLabel()"></label>
-      <span class="ss-required-asterisk">*</span></div>
-      <div dir="ltr" class="ss-q-help ss-secondary-text"></div></label>
-      <select required="" aria-required="true" aria-label="Role:  " id="entry_1532018178" name="entry.1532018178"><option value=""></option>
-      <option value="Developer">Developer</option> <option value="Tester">Quality Analyst</option> <option value="Consultant">Consultant</option> <option value="Student">Student</option> <option value="Project Manager">Project Manager</option> <option value="Product Manager">Product Manager</option> <option value="Other">Other</option></select>
-      </div></div></div> <div role="listitem" class="ss-form-question errorbox-good">
-      <div class="ss-item ss-item-required ss-select" dir="ltr"><div class="ss-form-entry">
-      <label for="entry_885777579" class="ss-q-item-label"><div class="ss-q-title">Experience:
-      <label aria-label="(Required field)" for="itemView.getDomIdToLabel()"></label>
-      <span class="ss-required-asterisk">*</span></div>
-      <div dir="ltr" class="ss-q-help ss-secondary-text"></div></label>
-      <select required="" aria-required="true" aria-label="Experience:  " id="entry_885777579" name="entry.885777579"><option value=""></option>
-      <option value="&nbsp;&lt; 2 years">&nbsp;&lt; 2 years</option> <option value="2 - 4 years">2 - 4 years</option> <option value="4 - 6 years">4 - 6 years</option> <option value="&gt; 6 years">&gt; 6 years</option> <option value=""></option></select>
-      </div></div></div> <div role="listitem" class="ss-form-question errorbox-good">
-      <div class="ss-item ss-item-required ss-select" dir="ltr"><div class="ss-form-entry">
-      <label for="entry_839910871" class="ss-q-item-label"><div class="ss-q-title">How did you hear about us?
-      <label aria-label="(Required field)" for="itemView.getDomIdToLabel()"></label>
-      <span class="ss-required-asterisk">*</span></div>
-      <div dir="ltr" class="ss-q-help ss-secondary-text"></div></label>
-      <select required="" aria-required="true" aria-label="How did you hear about us?  " id="entry_839910871" name="entry.839910871"><option value=""></option>
-      <option value="Social Media">Social Media</option> <option value="Friends">Friends</option> <option value="Other">Other</option></select>
-      </div></div></div>
-      <input type="hidden" value="[,,&quot;-3882447989643793814&quot;]
-      " name="draftResponse">
-      <input type="hidden" value="0" name="pageHistory">
-
-
-      <input type="hidden" value="-3882447989643793814" name="fbzx">
-
-      <div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td dir="ltr" id="navigation-buttons" class="ss-form-entry goog-inline-block">
-      <input type="submit" id="ss-submit" value="Submit" name="submit">
-    </td>
-      </tr></tbody></table></div></ol></form>
-
-    </div>
+      <p align="center">Registrations and submissions have been closed now</p>
     </div>
 
         <footer class="site-footer">
